2007-11-13  Thiago Jung Bauermann  <bauerman@br.ibm.com>

	* tui/tui-data.c (tui_prev_win): Guard against NULL.

2007-11-12  Markus Deuling  <deuling@de.ibm.com>

	* gdbarch.sh (gdbarch_alloc): Replace current_gdbarch by gdbarch. Remove
	obsolete comment.
	(verify_gdbarch, gdbarch_dump): Likewise.
	(do_read): Update comment.
	(addr_bit, bfd_arch_info, target_desc, long_long_bit, floatformat)
	(ptr_bit, name_of_malloc): Replace current_gdbarch by gdbarch.
	* gdbarch.{c,h}: Regenerate.

2007-11-12  Markus Deuling  <deuling@de.ibm.com>

	* xtensa-tdep.c (ARG_1ST): Replace ARGS_FIRST_REG by its expression.
	(ARGS_FIRST_REG): Remove.
	(areg_numer): New function.
	(xtensa_pseudo_register_read, xtensa_frame_prev_register)
	(xtensa_extract_return_value, xtensa_store_return_value)
	(xtensa_frame_cache): Replace AREG_NUMBER by areg_number.
	(AREG_NUMBER): Remove.
	(XTENSA_IS_ENTRY, ARG_NOF, ARG_1ST): Add gdbarch as parameter.
	(xtensa_frame_cache): Update use of XTENSA_IS_ENTRY.
	(xtensa_push_dummy_call): Update use of ARG_NOF.
	(extract_call_winsize): Add gdbarch as parameter. Replace
	current_gdbarch by gdbarch.
	(xtensa_extract_return_value, xtensa_store_return_value): Update call
	of extract_call_winsize.

2007-11-10  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Add entry for new set/show print frame-args command.

2007-11-09  Kevin Buettner  <kevinb@redhat.com>

	* mn10300-tdep.c (mn10300_dwarf2_reg_to_regnum): Add missing
	register number to map.  Adjust warning check and error/warning
	return value code to match expectations of this function's callers.

2007-11-09  Joel Brobecker  <brobecker@adacore.com>

	* stack.c (print_this_frame_argument_p): Handle arguments passed
	by reference properly.

2007-11-09  Joel Brobecker  <brobecker@adacore.com>

	* stack.c (print_frame_arguments_choices): New static global.
	(print_frame_arguments): Likewise.
	(print_this_frame_argument_p): New function.
	(print_frame_args): Print the argument value only when appropriate.