@@ -1,3 +1,7 @@
+2007-11-14  Doug Evans  <dje@google.com>
+
+	* buildsym.c (start_subfile,start_symtab): Doc fixes.
+
 2007-11-13  Thiago Jung Bauermann  <bauerman@br.ibm.com>
 
 	* tui/tui-data.c (tui_prev_win): Guard against NULL.
